fixed spacing in pop up menu

--- a/src/Components/Header/index.scss
+++ b/src/Components/Header/index.scss
@@ -18,7 +18,7 @@
         width: 100%;
         height: 58px;
         padding: 0 50px;
-        background: transparent;
+        background-color:rgba($color: #333333, $alpha: 0.85) ;
         top: 0;
         left: 0;
         z-index: 2;
@@ -42,13 +42,13 @@
     .menu-container {
         @extend .dflex;
         position: fixed;
-        padding-top: 5rem;
         width: 100%;
         height: 100%;
         background-color: black;
         color: #fff;    
         flex-direction: column;
         z-index: 10;
+        gap: 5rem;
         p { 
             display: inline-flex;
             color: #fff;
@@ -57,7 +57,6 @@
             overflow: hidden;
             font-size: 2vw;
             text-transform: uppercase;
-            margin-top: 10vw;
 
         }
         p:hover {
